# english-word-stories

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  agent.py  archive.py  config.py  main.py  rendering.py  schemas.py
docs/: implementation-notes.html
skills/english-word/: SKILL.md
static/: app.js  index.html  styles.css
