[project]
name = "english-word-stories"
version = "0.1.0"
description = "词源奇旅 / English Word Stories agent app built with DeepAgents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents==0.6.12",
    "fastapi==0.138.1",
    "langchain-openai==1.3.3",
    "markdown==3.10.2",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "uvicorn[standard]==0.49.0",
]

[tool.uv]
package = true

[project.scripts]
english-word-stories = "app.main:run"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
